[tool.poetry]
name = "bmd-perf"
version = "0.0.1"
description = "Simple performance tools for the Laboratory for Bio-Micro Devices"
readme = "README.md"
license = "LICENSE"
authors = ["Sebastian Ahn <wahn1@bwh.harvard.edu>"]
keywords = ["performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]
packages = [{ include = "bmd_perf" }]

[tool.poetry.dependencies]
python = ">=3.8"
pint = "^0.20"
viztracer = "^0.15"

[tool.poetry.dev-dependencies]
black = { version = "^23.1", extras = ["d"] }

#[project.urls]
#repository = "https://github.com/biomicrodev/bmd-perf"
#laboratory = "https://jonaslab.bwh.harvard.edu"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
